--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,5 +1,9 @@
+:root{
+    --corPrimaria: #03A64A;
+}
+
 .containerNativo{
-    background-color: #03A64A;
+    background-color: var(--corPrimaria);
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -7,9 +11,9 @@
     align-items: center;
 }
 
-.containerDosElementos{
-    width: 30vw;
-    height: 50vh;
+.containerElementos{
+    width: 500px;
+    height: 500px;
     background-color: #ffffff;
     border-radius: 10px;
     margin-top: 10vh;
@@ -21,13 +25,13 @@
 }
 
 .resultado{
-    color: #03A64A;
+    color: var(--corPrimaria);
     font-size: 25px;
 }
 
 .btn {
     font-size: 25px;
-    background-color: #03A64A;
+    background-color: var(--corPrimaria);
     color: #ffffff;
     font-weight: bold;
     border: none;
@@ -40,9 +44,75 @@
     font-weight: 400;
 }
 
+/* Responsividade */
+@media (max-width: 280px){
+    .containerNativo{
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: center;
+    }
 
+    .containerElementos{
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+    
+    .logo{
+        width: 35vw;
+        margin: 50px 0 15px 0;
+    }
 
+    .frase{
+        font-size: 20px ;
+    }
 
+    .resultado{
+        font-size: 20px;
+    }
+    
+    .btn {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 550px){
+    .containerNativo{
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: center;
+    }   
+
+    .containerElementos{
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+    
+    .logo{
+        width: 35vw;
+        margin: 50px 0 15px 0;
+    }
+}
+
+@media (max-width: 1280px){
+    .containerNativo{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .containerElementos{
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+}
 
 
 
